gcc/testsuite/rust/rustc/ui/suggestions/bad-hex-float-lit.rs
fn main() {
    let _f: f32 = 0xAAf32;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { help ".E0308." "" { target *-*-* } .-2 }

    let _f: f32 = 0xAB_f32;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { help ".E0308." "" { target *-*-* } .-2 }

    let _f: f64 = 0xFF_f64;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { help ".E0308." "" { target *-*-* } .-2 }
}

